syntax = "proto3";

package api;

option go_package = "/api";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message RelatedFile {
  string reason = 1;
  string target_file_id = 2;
}

message UploadFileRequest {
  string file_id = 1; 
  repeated RelatedFile revoke = 2;
  repeated RelatedFile modify = 3;
}

service FileService {
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileResponse {
  bool status = 1;
  string message = 2;
}